--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real estate residence</title>
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="bower_components/aos/dist/aos.js"></script> 
+     <script>
+    AOS.init();
+  </script>
   </body>
 </html>
